force-app/main/default/objects/LoanACBal__c/LoanACBal__c.object-meta.xml
<CustomObject>
    <label>Loan+A/C Bal</label>
    <nameField>
        <displayFormat>LNAC-{000000}</displayFormat>
        <label>LOAN+A/C BAL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan+A/C Bal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>