force-app/main/default/objects/LoanACBal__c/fields/ACBalanceID__c.field-meta.xml
<CustomField>
    <fullName>ACBalanceID__c</fullName>
    <label>A/C BALANCE ID</label>
    <referenceTo>ACBalance__c</referenceTo>
    <relationshipLabel>LOAN+A/C BAL</relationshipLabel>
    <relationshipName>LoanACBal</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>