force-app/main/default/objects/LoanACBal__c/fields/ClosingBalanceACBal__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceACBal__c</fullName>
    <label>CLOSING BALANCE-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>