force-app/main/default/objects/LoanACBal__c/fields/ClosingBalanceFormu__c.field-meta.xml
<CustomField>
    <fullName>ClosingBalanceFormu__c</fullName>
    <formula>LoanID__r.ClosingBalance__c</formula>
    <label>CLOSING BALANCE FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>