force-app/main/default/objects/LoanACBal__c/fields/LoanAmountACBal__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountACBal__c</fullName>
    <label>LOAN AMOUNT-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>