force-app/main/default/objects/LoanACBal__c/fields/LoanAmountFormu__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountFormu__c</fullName>
    <formula>LoanID__r.LoanAmount__c</formula>
    <label>LOAN AMOUNT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>